--- a/index.html
+++ b/index.html
@@ -2,119 +2,175 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Bem vindo a Várzea da Palma</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css" type="text/css">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Conheça Várzea da Palma</title>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 
-    <script src="jquery-3.4.1.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="scripts/scripts"></script>
-
+  <script src="jquery-3.4.1.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="scripts/scripts"></script>
 </head>
 
 <body>
 
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-light bg-light">
-            <a class="navbar-brand" href="index.html">Várzea da Plama</a>
-            <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
-                data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="collapsibleNavId">
-                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Página inicial<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">A Festa</a>
-                    </li>
+  <header>
+    <nav class="navbar navbar-expand-sm navbar-light ">
+      <a><img src="img/icoVzp.png" alt="Bandeira VZP" width="50px"></a>
+      <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
+        aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavId">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Página inicial<span class="sr-only">(current)</span></a>
+          </li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">Saiba mais</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdownId">
-                            <a class="dropdown-item" href="#">Culturas</a>
-                            <a class="dropdown-item" href="#">Historias da Palma</a>
-                        </div>
-                    </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Procurar">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Procurar</button>
-                </form>
-            </div>
-        </nav>
-    </header>
+          <li class="nav-item">
+            <a class="nav-link" href="#">A Festa</a>
+          </li>
 
-    <section id="intro">
-        <div class="jumbotron jumbotron-fluid text-center">
-            <div class="container">
-                <h1 class="display-3">Bem vindo a Várzea da Palma</h1>
-                <p class="lead">Conheça mais sobre está cidade maravilhosa!</p>
-                <hr class="my-2">
-                <p>Colocar imagens com </p>
-
-                <div class="bd-example" id="carouselIndex">
-                    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-                      <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                      </ol>
-                      <div class="carousel-inner">
-                        <div class="carousel-item active">
-                          <img src="img/rowOuro.jpg" class="d-block w-100" alt="...">
-                          <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                          </div>
-                        </div>
-                        <div class="carousel-item">
-                          <img src="img/rowPremiun.jpg" class="d-block w-100" alt="...">
-                          <div class="carousel-caption d-none d-md-block">
-                            <h5>Second slide label</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                          </div>
-                        </div>
-                        <div class="carousel-item">
-                          <img src="img/rowTop.jpg" class="d-block w-100" alt="...">
-                          <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                          </div>
-                        </div>
-                      </div>
-                      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                      </a>
-                      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                      </a>
-                    </div>
-                  </div>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false">Saiba mais</a>
+            <div class="dropdown-menu" aria-labelledby="dropdownId">
+              <a class="dropdown-item" href="#">Culturas</a>
+              <a class="dropdown-item" href="#">Galeria</a>
             </div>
 
+            <li class="nav-item">
+                <a class="nav-link" href="#">Site da prefeitura</a>
+              </li>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Procurar">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Procurar</button>
+        </form>
+      </div>
+    </nav>
+  </header>
+
+  <section id="intro">
+    <div class="jumbotron jumbotron-fluid text-center">
+      <div class="container">
+        <h1 class="display-3">Bem vindo a Várzea da Palma</h1>
+        <p class="lead">Conheça mais sobre está cidade maravilhosa!</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="carouselintro">
+    <div class="row">
+
+      <div class="col-lg-1"></div>
+
+      <div class="col-lg-10 text-center">
+        <div class="bd-example text-center" id="carouselIndex">
+          <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner center-block">
+              <div class="carousel-item active">
+                <img src="img/carousel1.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block textcarousel">
+                  <h5>Festa é oque não falta</h5>
+                  <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="img/carousel2.jpeg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block textcarousel">
+                  <h5>Conheça o nosso centro cultural</h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="img/carousel3.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block textcarousel">
+                  <h5>A igreja da barra</h5>
+                  <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
         </div>
+      </div>
 
-        
-    </section>
+      <div class="col-lg-1"></div>
+
+    </div>
+  </section>
+
+  <section class="linksin">
+    <div class="row">
+
+      <div class="col-lg-6 text-center">
+        <img class="img-circle" src="img/Serrinha-vzp-varzea-da-palma-turismo-3.jpg" alt="Generic placeholder image">
+        <h2>Galeria de Várzea da Palma</h2>
+        <p>Veja momentos fantasticos na historia da nossa cidade</p>
+        <p><a id="btnrow1" class="btn btn-default" href="#" role="button">Ver detalhes »</a></p>
+      </div>
+
+      <div class="col-lg-6 text-center">
+        <img class="img-circle" src="img/3.JPG" alt="Generic placeholder image">
+        <h2>Historias de Várzea da Palma</h2>
+        <p>Veja algumas das historias de Várzea da Palma. </p>
+        <p><a id="btnrow1" class="btn btn-default" href="#" role="button">Ver detalhes »</a></p>
+      </div>
+
+    </div>
+  </section>
+
+  <section class="sessaoparallex">
+    <div class="row">
+      <div class="efeitoParallax tamanhoParallax text-center">
+        <h1>teste</h1>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="row">
+      <div class="col-lg-4 text-center">
+        <h1>Localização de Várzea da Palma</h1>
+      </div>
+
+      <div class="col-lg-8 text-center">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d974574.7046704885!2d-45.30154432510284!3d-17.415029578915455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xaa144bbb5f2d47%3A0x5982051b268bafb0!2sV%C3%A1rzea+da+Palma+-+MG!5e0!3m2!1spt-BR!2sbr!4v1562028182611!5m2!1spt-BR!2sbr"
+          width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+
+  </footer>
 
 </body>
 
