--- a/cultura.html
+++ b/cultura.html
@@ -85,83 +85,114 @@
     <section id="intro">
         <div class="jumbotron jumbotron-fluid text-center">
             <div class="container">
-                <h1 class="display-3">Historia de Várzea da Palma</h1>
-                <p class="lead">Conheça causos, mitos e lendas!</p>
+                <h1 class="display-3">Cultura de Várzea da Palma</h1>
+                <p class="lead">Conheça mais sobre a cultura de Várzea da Palma!</p>
             </div>
         </div>
     </section>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>Conheça o Guaicui - O berço historico regional</h2>
+            </div>
+
+            <div class="col-lg-7 text-center">
+                <p>Barra do Guaicuí é um distrito do município de Várzea da Palma, localizado na região do Alto São
+                    Francisco, no estado de Minas Gerais. A localidade é conhecida pela barra do rio das Velhas, que
+                    deságua no rio São Francisco. O nome Guaicuí significa, em língua tupi, "rio das Velhas". Lugar rico
+                    pela sua cultura, Guaicuí procura conhecer a sua prória história.</p>
+                <p>
+                    A região da Barra do Guaicuí foi ocupada pelos índios cariris, originados do Ceará. No século XVII,
+                    a região foi explorada por bandeirantes paulistas em busca de ouro, entre os quais Fernão Dias, que
+                    teria mandado construir uma igreja de pedra, que ficou inacabada em decorrência das febres palúdicas
+                    daquela época. Nesta mesma região, encontrou pedras verdes (supostamente esmeraldas). Afinal morreu
+                    de malária às margens do rio das Velhas e acredita-se que seu filho Garcia Rodrigues trouxe seus
+                    ossos para São Paulo, onde estão enterrados no Mosteiro de São Bento.
+                </p>
+
+                <p>
+                    Não se sabe ao certo o porquê foi deixada inacabada. O mais provável é que tenha sido em razão do
+                    ataque de malária (impaludismo) nos trabalhadores. Uma segunda versão é das enchentes do rio,
+                    naqueles tempos medonhas e que de tempos em tempos inundava toda a região. Coincide também com a
+                    expulsão dos jesuítas do Brasil, por ordem do Marquês de Pombal.
+                </p>
+            </div>
+
+            <div class="col-md-5">
+                <img class="featurette-image img-responsive center-block img02"
+                    src="img/Igreja de Pedra construída por indios em Barra do Guaicui, distrito de Várzea da Palma MG, Norte de Minas por Claudete Leite (4).jpg"
+                    alt="Generic placeholder image">
+            </div>
+
+        </div>
+    </div>
+
+    <hr>
 
     <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2 class="text-center">A MULHER DA TROUXA</h2>
-                    <p>Contavam os mais velhos, que nos tempos em que Várzea da Palma não tinha luz da CEMIG, na época
-                        da Semana Santa e Quaresma, aparecia nas ruas da cidade, sempre ao entardecer, uma mulher velha,
-                        muito feia, esfarrapada, que levava sobre a cabeça uma grande trouxa. Por este motivo passou a
-                        ser chamada de “A mulher da trouxa”. As mães e avós diziam que a malvada pegava as crianças que
-                        encontrava perambulando pelas ruas e as levava para sua casa, jogava num tacho grande, misturava
-                        com fruta de tingui e fazia sabão. Com medo de serem apanhados, os moleques não saíam de casa
-                        para banhar no rio, caçar passarinhos, roubar frutas ou jogar bola e tinham que acompanhar seus
-                        pais indo à Igreja rezar. O objetivo era conseguido, mas vez em quando uma criança desaparecia
-                        ou morria afogada e corria na cidade a notícia de que havia sido levada pela “Mulher-da-Trouxa.”
-                    </p>
-                </div>
-                <div class="col-md-6 justify-content-center align-items-center">
-                    <img class="featurette-image img-responsive center-block img02" src="img/mito1.jpg"
-                        alt="Generic placeholder image">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-12">
-                    <h2 class="text-center"> O LOBISOMEM DA PALMA VELHA</h2>
-                    <p>Contavam os mais antigos que viveram no arraial de Palma Velha, que lá tinha um homem muito mau,
-                        violento, assassino e sanguinário, que fazia muitas atrocidades e já tinha matado pra mais de
-                        cem. Chamava-se “Felão”. Quando morreu numa tocaia, foi jogado no meio da mata da Palma Velha,
-                        ninguém quis lhe enterrar no pequeno cemitério que lá existia. Por causa disso, correu a notícia
-                        de que “Felão” se tornara “alma penada” e que virara “Lobisomem” assustando os moradores,
-                        caçadores e tropeiros. Contam que por isso, os moradores da vila se mudaram para perto da
-                        Estação da Central, abandonando seus pertences. Palma Velha virou uma vila fantasma tomada pelo
-                        mato e abandono, lá morando somente o tal “Lobisomem da Palma Velha”. Foi assim que nasceu a
-                        cidade de Várzea da Palma. Dizem que até hoje “Felão” ainda aparece naquela região, assustando
-                        os passantes menos desavisados.</p>
-                </div>
-                <div class="col-md-6">
-                    <img class="featurette-image img-responsive center-block img02" src="img/mito22.jpg"
-                        alt="Generic placeholder image">
-                </div>
-                <div class="col-md-6 ">
-                    <img class="featurette-image img-responsive center-block img02" src="img/mito2.jpg"
-                        alt="Generic placeholder image">
-                </div>
-
-            </div>
-
-            <div class="row">
-                <div class="col-md-12">
-                    <h2 class="text-center">O CABOCLO DO CÁI D’ÁGUA</h2>
-                    <p>Contam os pescadores mais antigos, que no trecho do rio das Velhas conhecido como Cái D’água ou
-                        Cair D’água existe um “caboclo d´água” que aparece para os pescadores que sobem o rio de canoa
-                        para pescar naquele trecho. Alguns dizem ser o bicho um grande surubim cabeludo, outros que é o
-                        próprio “tinhoso” ou “demo”. Segundo afirmam, o tal caboclo submerge na água e deixa ver seu
-                        corpo peludo. Quando isso acontece, o pescador tem que jogar na água uma garrafa de cachaça e um
-                        cigarro de palha, charuto ou pedaço de fumo para agradar o bicho. Se não o fizer, o caboclo
-                        mergulha e vira a canoa ou então espanta todos os peixes do lugar e o pescador nada fisga. Mas
-                        se for atendido, a pescaria fica liberada e o pescador fisga muitos peixes com a ajuda do tal
-                        caboclo que aparece até hoje naqueles trechos do rio.</p>
-                </div>
-                <div class="col-md-6">
-                    <img class="featurette-image img-responsive center-block img02" src="img/mito3.jpg"
-                        alt="Generic placeholder image">
-                </div>
-                <div class="col-md-6">
-                    <img class="featurette-image img-responsive center-block img02" src="img/mito33.jpg"
-                        alt="Generic placeholder image">
-                </div>
+        <div class="row">
+            <div class="efeitoParallax2 tamanhoParallax text-center linksin">
+                <h1></h1>
             </div>
         </div>
     </section>
+
+    <div class="container linksin">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>Comidas tipicas de Várzea da Palma</h2>
+            </div>
+
+            <div class="col-lg-12 ">
+                <p>As comidas típicas do nosso município foram trazidas, principalmente pelos tropeiros no final do Séc.
+                    XIX e pelos pioneiros que aqui chegaram para morar a partir de 1.910.</p>
+                <p>Nos primórdios, os tropeiros usavam nas suas longas viagens pelo sertão afora, carne seca, peixe
+                    seco, farinha e faziam a tradicional paçoca de carne, batida no pilão.</p>
+
+                <p>Os ribeirinhos instituiram comidas baseadas em peixe, como surubim em postas, peixe assado na areia,
+                    pirão de cabeça de surubim, e outras variedades de pratos servidos com peixe. Dentre as comidas
+                    típicas da nossa região podemos enumerar:</p>
+            </div>
+
+            <div class="col-md-3">
+                <img class="featurette-image img-responsive center-block img02" src="img/ct1.JPG"
+                    alt="Generic placeholder image">
+            </div>
+
+            <div class="col-md-3">
+                <img class="featurette-image img-responsive center-block img02" src="img/ct12.JPG"
+                    alt="Generic placeholder image">
+            </div>
+
+            <div class="col-md-3">
+                <img class="featurette-image img-responsive center-block img02" src="img/ct13.JPG"
+                    alt="Generic placeholder image">
+            </div>
+
+            <div class="col-md-3">
+                <img class="featurette-image img-responsive center-block img02" src="img/ct4.JPG"
+                    alt="Generic placeholder image">
+            </div>
+
+            <div class="col-md-12 linksin">
+                <p><strong> Os principais pratos são: </strong> </p>
+                <ul>
+                    <li>ARROZ BRANCO COM PEQUI</li>
+                    <li>ARROZ COM PEQUI E CARNE DE SOL</li>
+                    <li>ARROZ COM PEQUI E FRANGO</li>
+                    <li>FEIJÃO TROPEIRO</li>
+                    <li>CHURRASCO</li>
+                    <li>DOBRADINHA</li>
+                    <li>FRANGO COM ANGU E QUIABO</li>
+                    <li>CALDO DE COSTELA COM MANDIOCA</li>
+                </ul>
+            </div>
+
+        </div>
+
+    </div>
+    </div>
 
 
     <footer class="page-footer font-small blue pt-4">
