--- a/historias.html
+++ b/historias.html
@@ -93,7 +93,7 @@
 
     <section>
         <div class="container">
-            <div class="row">
+            <div class="row justify-content-center align-items-cente">
                 <div class="col-md-12">
                     <h2 class="text-center">A MULHER DA TROUXA</h2>
                     <p>Contavam os mais velhos, que nos tempos em que Várzea da Palma não tinha luz da CEMIG, na época
@@ -107,7 +107,7 @@
                         ou morria afogada e corria na cidade a notícia de que havia sido levada pela “Mulher-da-Trouxa.”
                     </p>
                 </div>
-                <div class="col-md-6 justify-content-center align-items-center">
+                <div class="col-md-6 r">
                     <img class="featurette-image img-responsive center-block img02" src="img/mito1.jpg"
                         alt="Generic placeholder image">
                 </div>
@@ -115,7 +115,7 @@
 
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="text-center"> O LOBISOMEM DA PALMA VELHA</h2>
+                    <h2 class="text-center linksin"> O LOBISOMEM DA PALMA VELHA</h2>
                     <p>Contavam os mais antigos que viveram no arraial de Palma Velha, que lá tinha um homem muito mau,
                         violento, assassino e sanguinário, que fazia muitas atrocidades e já tinha matado pra mais de
                         cem. Chamava-se “Felão”. Quando morreu numa tocaia, foi jogado no meio da mata da Palma Velha,
@@ -140,7 +140,7 @@
 
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="text-center">O CABOCLO DO CÁI D’ÁGUA</h2>
+                    <h2 class="text-center linksin">O CABOCLO DO CÁI D’ÁGUA</h2>
                     <p>Contam os pescadores mais antigos, que no trecho do rio das Velhas conhecido como Cái D’água ou
                         Cair D’água existe um “caboclo d´água” que aparece para os pescadores que sobem o rio de canoa
                         para pescar naquele trecho. Alguns dizem ser o bicho um grande surubim cabeludo, outros que é o
