--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <img class="img-circle" src="img/3.JPG" alt="Generic placeholder image">
         <h2>Historias de Várzea da Palma</h2>
         <p>Veja algumas das historias de Várzea da Palma. </p>
-        <p><a id="btnrow1" class="btn btn-default" href="historias.html role="button">Ver detalhes »</a></p>
+        <p><a id="btnrow1" class="btn btn-default" href="historias.html" role="button">Ver detalhes »</a></p>
       </div>
 
     </div>
