--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
       </div>
 
-      <div class="col-lg-5 float-right text-right">
+      <div class="col-lg-7=5 float-right text-right">
         <div class="navbar-expand-sm">
           <ul class="navbar-nav">
 
@@ -66,10 +66,15 @@
               <a class="nav-link" href="galeria.html">Galeria</a>
             </li>
 
+
             <li class="nav-item">
-              <a class="nav-link" href="https://www.varzeadapalma.mg.gov.br/" target="_blank">Site da prefeitura</a>
+              <a class="nav-link" href="https://www.varzeadapalma.mg.gov.br/" target="_blank">Site da prefeitura<a>
             </li>
+            
+            <li class="nav-item">
+              <a class="nav-link" href="contato.html">Contato</a>
             </li>
+
           </ul>
 
         </div>
