--- a/galeria.html
+++ b/galeria.html
@@ -78,7 +78,11 @@
                             <a class="nav-link" href="https://www.varzeadapalma.mg.gov.br/" target="_blank">Site da
                                 prefeitura</a>
                         </li>
+
+                        <li class="nav-item">
+                                <a class="nav-link" href="contato.html">Contato</a>
                         </li>
+                        
                     </ul>
 
                 </div>
